--- a/css/partials/team.css
+++ b/css/partials/team.css
@@ -52,6 +52,7 @@
 .member-name {
   font-size: 16px;
   font-weight: 600;
+  color: var(--text-color);
   margin: 0;
 }
 
